final code with js

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <div class="app">
       <header class="header">
         <div class="header__content">
-          <a href="#" class="header__logo-link"
+          <a href="./index.html" class="header__logo-link"
             ><img src="./assets/shared/logo.svg" alt="Galleria Logo" class="header__logo"
           /></a>
-          <a href="#" class="header__btn--slide">start slideshow</a>
+          <a href="./starter-code/artist-page.html" class="header__btn--slide"
+            >start slideshow</a
+          >
         </div>
         <div class="header__line"></div>
       </header>
@@ -351,4 +353,5 @@
     </div>
   </body>
   <script src="js/grid.js"></script>
+  <script src="js/script.js"></script>
 </html>
